FIxed a few things, footer still bugged on smaller sites

--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,13 @@ body {
     margin: 0;
     display : flex;
     flex-direction: column;
+    position: relative;
 }
 a#main{
     padding-right: -300px;
 }
 body,html{
     height: 100vh;
-}
-
-.listings > ul {
-    display :flex;
-    flex-wrap: wrap;
-    justify-content:left;
-}
-.listings > ul > ul {
-    list-style: none;
-    margin-right: 5em;
-    margin-top: 5em;
-    margin-left : 5em;
-}
-.listings > ul > ul > img:hover{
-        filter: blur(3px);
-}
-.listings > ul > ul .name{
-    font-weight: bold;
-    font-size: xx-large;
 }
 
 body,ul {
@@ -73,9 +55,6 @@ body,ul {
     content: "|";
     color: #1b1b1b;
     margin-right: 10px;
-}
-img.listing {
-    border-radius: 20px;
 }
 
 .menu li::after {
